k8s/k8s-fastapi-data-collector/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-data-collector
  labels:
    name: fastapi-data-collector
