k8s/k8s-fastapi-data-collector/deployment.yaml
# https://www.strangebuzz.com/en/snippets/checking-if-the-elasticsearch-service-of-a-docker-container-is-ready
# https://joeblogs.technology/2020/12/concatenating-kubernetes-secrets-for-environment-variables/
# https://kubernetes.io/docs/tasks/inject-data-application/environment-variable-expose-pod-information/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-data-collector-deployment
  namespace: fastapi-data-collector
  labels:
    app: fastapi-data-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-data-collector-app
  template:
    metadata:
      labels:
        app: fastapi-data-collector-app
    spec:
      containers:
      - image: harbor.home.local/fastapi/fastapi-data-collector:latest
        imagePullPolicy: Always
        name: fastapi-data-collector
        ports:
        - containerPort: 5000
          name: fastapi
        readinessProbe:
          httpGet:
            port: fastapi
            path: /docs
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            port: fastapi
            path: /docs
          initialDelaySeconds: 5
          periodSeconds: 15
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: "1"
